# Digital_Duets

./: .gitignore  .gitmodules  CMakeLists.txt
core/: FDTD.cpp  FrameSequencer.cpp  ImplicitFDTD.cpp  PixelBufferObject.cpp  PixelDrawer.cpp  Quad.cpp  Shader.cpp  Texture2D.cpp  TextureFilter.cpp  main.cpp
include/: FDTD.h  ImplicitFDTD.h  PixelBufferObject.h  PixelDrawer.h  Quad.h  Shader.h  Texture2D.h  TextureFilter.h
projects/2.5D_implicitFDTD/: ArtVocSynth.cpp  ArtVocSynth.h  SimpleExcitation.cpp  SimpleExcitation.h  VocalTractFDTD.cpp  VocalTractFDTD.h  controls.cpp  defineDomain.cpp  defineDomain.h  freqResponse.cpp  freqResponse.h  geometries.cpp  geometries.h  main.cpp
projects/AistapSC2018_Demo_HDH/: DrumExcitation.cpp  DrumExcitation.h  HyperDrumExcitation.cpp  HyperDrumExcitation.h  HyperDrumSynth.cpp  HyperDrumSynth.h  HyperDrumhead.cpp  HyperDrumhead.h  HyperDrumheadEngine.cpp  HyperDrumheadEngine.h  HyperPixelDrawer.cpp  HyperPixelDrawer.h  controls.cpp  controls.cpp.orig  controls.h  controls_GLFW.cpp  controls_GLFW.h  controls_midi.cpp  main.cpp
projects/ArticulatoryVocalSynth/: ArtVocSynth.cpp  ArtVocSynth.h  SimpleExcitation.cpp  SimpleExcitation.h  VocalTractFDTD.cpp  VocalTractFDTD.h  areaFunctions.cpp  controls.cpp  defineDomain.cpp  freqResponse.h  main.cpp
projects/Drumhead/: DrumExcitation.cpp  DrumExcitation.h  DrumSynth.cpp  DrumSynth.h  DrumheadGPU.h  Engine.h  controls.cpp  controls.h  main.cpp
projects/Drumhead_barebone/: main.cpp  makefileVic  openGL_functions.cpp  openGL_functions.h  openGL_utils.cpp  openGL_utils.h
projects/Drumhead_procedural/: GlEngine.cpp  GlEngine.h  main.cpp  openGL_functions.cpp  openGL_functions.h  openGL_utils.cpp  openGL_utils.h
projects/FDTD_example/: FDTDExcitation.cpp  FDTDExcitation.h  FDTDSynth.cpp  FDTDSynth.h  controls.cpp  main.cpp
projects/FestivalScienza2017_Demo/: DrumExcitation.cpp  DrumExcitation.h  HDH_AudioEngine.cpp  HDH_AudioEngine.h  HyperDrumSynth.cpp  HyperDrumSynth.h  HyperDrumhead.cpp  HyperDrumhead.h  HyperPixelDrawer.cpp  HyperPixelDrawer.h  OscButton.cpp  OscButton.h  OscPulseButton.cpp  OscPulseButton.h  OscSliderV.cpp  OscSliderV.h  QuadHyperDrumHead.cpp  QuadHyperDrumHead.h  controls.cpp  main.cpp  monomeControl.cpp  monomeControl.h
projects/HDH_multichannel/: HyperDrumExcitation.cpp  HyperDrumExcitation.h  HyperDrumQuad.h  HyperDrumSynth.cpp  HyperDrumSynth.h  HyperDrumhead.cpp  HyperDrumhead.h  HyperPixelDrawer.cpp  (+15 more)
(+347 files in other folders)
